--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -1,33 +1,20 @@
 version: '3.4'
 
 services:
-  kegelVerwaltung:
+  kegel-verwaltung:
     build: .
-    #image: registry.mnl-fhrn.de/lsrg/camerawebsite:latest
     restart: unless-stopped
     stdin_open: true # docker run -i
     tty: true        # docker run -t
 
     volumes:
-     # - ./data/logs:/logs:rw
-     # - ./data/config:/config:ro
-     # - /etc/localtime:/etc/localtime:ro
-    #ports:
-    #  - 5020:8000
+      - ./data/logs:/logs:rw
+      - ./data/config:/config:ro
+      - /etc/localtime:/etc/localtime:ro
+     
     environment:
       - TZ="Europe/Berlin"
-    #command: python app.py
-
-    command: gunicorn -w 1
-            -b :8000 app:app \
-            --access-logfile ./logs/log.txt \
-            --log-level info \
-            --timeout 90 \
-            --workers 25 \
-            --worker-class gevent \
-            --debug=True
-            
-
+           
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.kegelVerwaltung.rule=Host(`kegeln.domain.de`)"
